cmake_minimum_required(VERSION 3.13)
project(cpp_competitive_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(A AtCoder/ABC/085/A.cpp)
add_executable(B AtCoder/ABC/085/B.cpp)
add_executable(C AtCoder/ABC/007/C.cpp)
add_executable(D AtCoder/ABC/137/D_after1.cpp)
add_executable(E AtCoder/ABC/137/E.cpp)
add_executable(F AtCoder/ABC/137/F.cpp)
