cmake_minimum_required(VERSION 3.13)
project(cpp_competitive_programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(A AtCoder/ABC/071/A.cpp)
add_executable(B AtCoder/ABC/071/B.cpp)
add_executable(C AtCoder/ABC/083/C.cpp)
add_executable(D AtCoder/ABC/141/D.cpp)
add_executable(E AtCoder/ABC/141/E.cpp)
add_executable(F AtCoder/ABC/141/F.cpp)
